# 02476_project

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloudbuild.yaml  config.py  frontend.dockerfile  frontend.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tasks.py  test.py
.devcontainer/: devcontainer.json
.devops/python_scripts/: clear_user_inputs.py  enrich_db.py
.devops/scripts/: run_api.sh  run_frontend.sh  run_training_with_docker.sh  run_update_data.sh
.github/workflows/: linting.yaml  pre-commit-update.yaml  tests.yaml
cloud_cmd_log/: 2026-01-19_model_registry.sh
configs/: config_gpu.yaml  feature_set1.json  models.json
configs/feature_sets/: feature_set1.json
configs/hydra/: config.yaml
configs/hydra/data/: default.yaml
configs/hydra/model/: tabular_classifier.yaml
configs/hydra/optimizer/: adam.yaml  sgd.yaml
configs/hydra/paths/: default.yaml
configs/hydra/trainer/: default.yaml
data/: .gitignore  enriched.dvc  processed.dvc  raw.dvc
data/.dvc/: config
data/data_drift/: input_database.csv
dockerfiles/: api.dockerfile  fastapi.dockerfile  frontend.dockerfile  requirements_frontend.txt  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
export_to_onnx/: export_to_onnx.py
infrastructure/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
models/20260118_174908/hydra/.hydra/: config.yaml  hydra.yaml
models/20260118_175741/hydra/.hydra/: hydra.yaml
models/api_models/diagnosed_diabetes/MLP/feature_set1/v1/: best_model.pt  config.json
reports/: README.md  report.html  report.py
src/diabetic_classification/: api.py  constants.py  data.py  frontend.py  model.py  train.py
src/diabetic_classification/monitoring/: diabetes_monitoring.dockerfile  diabetes_monitoring.py
tests/: __init__.py  conftest.py  test_data.py  test_exporting_to_onnx.py  test_model.py  test_train.py
tests/integration_tests/: test_api.py
tests/performance_tests/: locustfile.py
tools/: ckpt_to_pt.py
