[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "diabetic_classification"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.7",
    "fastapi==0.115.6",
    "hydra-core>=1.3.2",
    "kaggle>=1.8.3",
    "kagglehub[pandas-datasets]>=0.4.0",
    "loguru>=0.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pytorch-lightning>=2.6.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.21.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I", "D", "N", "E", "W"] # Import, Docstring, Naming, Error, Warning
lint.ignore = [
    "D100", # Ignore missing docstring in public module
    "D104", # Ignore missing docstring in public package
    "D107", # Ignore missing docstring in __init__
    "D203", # Ignore 1 blank line required before class docstring
    "D212", # Ignore multi-line docstring summary should start at the first line
]
per-file-ignores = { "tests/*" = ["D"]} # Ignore all docstring errors in tests, since the test names are descriptive enough

[tool.coverage.run]
omit = ["tests/*", "tmp/*", "*/_remote_module_non_scriptable.py"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "kagglehub"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kagglehub.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
