[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "diabetic_classification"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.2.4",
    "click==8.1.7",
    "docker>=7.1.0",
    "dvc>=3.66.1",
    "dvc-gs>=3.0.2",
    "evidently>=0.7.20",
    "fastapi==0.133.1",
    "hydra-core>=1.3.2",
    "kaggle>=1.8.3",
    "kagglehub[pandas-datasets]>=0.4.0",
    "locust>=2.43.1",
    "loguru>=0.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "prometheus-client>=0.24.1",
    "pyarrow>=22.0.0",
    "pydantic-settings>=2.12.0",
    "pytorch-lightning>=2.6.0",
    "requests>=2.32.5",
    "rich-click>=1.9.6",
    "scikit-learn>=1.8.0",
    "streamlit>=1.53.0",
    "torch==2.6.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.21.0",
    "typer==0.21.1",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.1",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.13",
    "mkdocstrings-python==1.12.2",
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "httpx>=0.28.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[tool.uv]
# Ensure uv resolves dependencies for both macOS arm64 (CPU) and Linux x86_64 (CUDA)
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I", "D", "N", "E", "W"] # Import, Docstring, Naming, Error, Warning
lint.ignore = [
    "D100", # Ignore missing docstring in public module
    "D104", # Ignore missing docstring in public package
    "D107", # Ignore missing docstring in __init__
    "D203", # Ignore 1 blank line required before class docstring
    "D212", # Ignore multi-line docstring summary should start at the first line
]
lint.per-file-ignores = { "tests/*" = ["D"]} # Ignore all docstring errors in tests, since the test names are descriptive enough

[tool.coverage.run]
omit = ["tests/*", "tmp/*", "*/_remote_module_non_scriptable.py"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "kagglehub"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kagglehub.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "evidently"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "evidently.*"
ignore_missing_imports = true
